--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta property="og:image"  content="https://i.ytimg.com/vi/WQpO3LRF5ac/maxresdefault.jpg" />
+  <meta property="og:image"  content="https://www.pinkvilla.com/files/more-and-more-twice-drops-a-florally-aesthetic-music-video-with-a-dance-break-of-our-wildest-dreams.jpg" />
   <!-- font awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
   <!--Import Google Icon Font-->
