spelling error fixed

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
             </br>
             <h3>More&More</h3>
             <p>"More & More" is the ninth Korean EP by the South Korean girl group Twice. It was released by JYP Entertainment and Republic Records on June 1, 2020, and features the lead single of the same name.</p>
-            <h3>Fanefare</h3>
+            <h3>Fanfare</h3>
             <p>"Fanfare" is a Japanese song by South Korean girl group Twice. The song and music video were released by Warner Music Japan on June 18, 2020.</p>
             <div class="carousel show-on-small">
               <a class="carousel-item" href="#one!"><img src="img/11.jpg"></a>
