--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       </div>
       <div class="col s12 l6 offset-l1">
         <h2 class="pink-text text-lighten-3">Jihyo 지효</h2>
-        <p>birth name: Park Jisoo</p>
+        <p>birth name: Park Jisoo 박지수</p>
         <p>birthplace: Guri, South Korea</p>
         <p>birthday: February 1, 1997</p>
         <p>position: leader, main vocalist</p>
